After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755824 - dashdemux: Correctly assign earliest pts instead of overriding it with first offset
dashdemux: Correctly assign earliest pts instead of overriding it with first ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.6.0
Other Windows
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-30 03:10 UTC by WeiChungChang
Modified: 2015-10-05 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
diff (921 bytes, application/mbox)
2015-09-30 03:10 UTC, WeiChungChang
  Details
diff (921 bytes, patch)
2015-09-30 03:11 UTC, WeiChungChang
committed Details | Review

Description WeiChungChang 2015-09-30 03:10:26 UTC
Created attachment 312385 [details]
diff

There is a wrongly typo there to assign earliest_pts a wrong value when parsing SIDX box within Gstisoff.c.
Comment 1 WeiChungChang 2015-09-30 03:11:18 UTC
Created attachment 312386 [details] [review]
diff
Comment 2 Sebastian Dröge (slomo) 2015-10-02 13:01:16 UTC
commit 58cb254450632c8db3ae775c90daf5946a898e9b
Author: John Chang <r97922153@gmail.com>
Date:   Wed Sep 30 11:00:39 2015 +0800

    dashdemux: Correctly assign earliest pts instead of overriding it with first offset
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755824