dashdemux: Correctly assign earliest pts instead of overriding it with first offset

https://bugzilla.gnome.org/show_bug.cgi?id=755824